Update index.html path (deleted ../)

--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Tracy Yang">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Tracy Yang professional website">
-    <link rel="stylesheet" href="../static/style.css">
-    <script defer src="../static/script.js"></script>
+    <link rel="stylesheet" href="static/style.css">
+    <script defer src="static/script.js"></script>
     <!-- This is for jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- This is a font for hamburger icon -->
