--- a/views/index.html
+++ b/views/index.html
@@ -19,9 +19,9 @@
         <h1 id="webname">Tracy Yang</h1>
         <nav id="myTopnav" class="topnav">
             <a href="index.html" class="active">Home</a>
-            <a href="CV.html">CV</a>
-            <a href="contact.html">Contact Me</a>
-            <a href="fun.html">For Fun</a>
+            <a href="views/CV.html">CV</a>
+            <a href="views/contact.html">Contact Me</a>
+            <a href="views/fun.html">For Fun</a>
             <a href="javascript:void(0);" class="icon">
                 <i class="fa fa-bars" onclick="activeNav()"></i>
             </a>
@@ -29,7 +29,7 @@
     </header>
     <div class="main">
         <h2 id="greeting"></h2>
-        <img class="classA" src="../static/IMG_6262.png" alt="Tracy Yang profile image" width="350px">
+        <img class="classA" src="static/IMG_6262.png" alt="Tracy Yang profile image" width="350px">
         <!-- <p class="classA" id="intro">I am a third-year student at Carnegie Mellon University studying Information Systems and Business Administration. 
             I am hard-working and enjoy navigating any challenges that come my way. I am also a very motivated individual with a passion for learning new things. 
             I always look for opportunities to grow and actively seek them in my career. 
