--- a/views/cv.html
+++ b/views/cv.html
@@ -18,7 +18,7 @@
     <header>
         <h1 id="webname">Tracy Yang</h1>
         <nav id="myTopnav" class="topnav">
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="CV.html" class="active">CV</a>
             <a href="contact.html">Contact Me</a>
             <a href="fun.html">For Fun</a>
