--- a/views/fun.html
+++ b/views/fun.html
@@ -20,7 +20,7 @@
     <header>
         <h1 id="webname">Tracy Yang</h1>
         <nav id="myTopnav" class="topnav">
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="CV.html">CV</a>
             <a href="contact.html">Contact Me</a>
             <a href="fun.html" class="active">For Fun</a>
